# fleetpulse

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.consumer  Dockerfile.lite  Dockerfile.producer  Dockerfile.streamlit  LICENSE  Makefile  README.md  config.yaml  docker-compose.lite.yml  docker-compose.yml  pyproject.toml  requirements-app.txt  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
app/components/: anomaly_feed.py  fleet_overview.py  truck_deepdive.py
dags/: ingest_dag.py  transform_dag.py
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/dimensions/: dim_trucks.sql  schema.yml
dbt_project/models/marts/: fct_hourly_sensor_aggregates.sql  fct_maintenance_events.sql  schema.yml
dbt_project/models/staging/: schema.yml  stg_telemetry.sql
dbt_project/seeds/: dim_trucks_seed.csv  maintenance_events_seed.csv
dbt_project/tests/: assert_engine_temp_range.sql
docs/screenshots/: .gitkeep
fleetpulse/: __init__.py
fleetpulse/alerter/: __init__.py  alert_service.py
fleetpulse/analytics/: __init__.py  anomaly.py  reliability.py  utils.py  weibull.py
fleetpulse/ingestion/: __init__.py  direct_writer.py  kafka_consumer.py
fleetpulse/simulator/: __init__.py  config.py  producer.py
scripts/: generate_maintenance_seed.py  run_pipeline.py  validate_setup.py
tests/: __init__.py  conftest.py  test_anomaly.py  test_reliability.py  test_weibull.py
